<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/list_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
    android:background="@color/colorNightBlue"
                android:padding="7dp" >

    <Switch
        android:id="@+id/alarm_switch_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:padding="4dp"
        android:gravity="center"
        android:layout_above="@+id/linearLayout"/>

    <TextView
        android:id="@+id/alarm_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textStyle="bold"
        android:textSize="41sp"
        android:textColor="#FFFFFF"
        android:padding="4dp"
        tools:text=" Time"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/alarm_time"
        android:padding="4dp"
        android:orientation="horizontal"

        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/alarm_repeat_sun"
            android:layout_width="match_parent"
            android:textColor="@color/colorWhite"

            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Get up!"/>

        <TextView
            android:id="@+id/alarm_repeat_mon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorNightBlue"
            android:text="@string/mon"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/alarm_repeat_tue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorNightBlue"
            android:text="@string/tue"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/alarm_repeat_wed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorNightBlue"
            android:text="@string/wed"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/alarm_repeat_thu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thu"
            android:textColor="@color/colorNightBlue"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/alarm_repeat_fri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorNightBlue"
            android:text="@string/fri"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/alarm_repeat_sat"
            android:layout_width="match_parent"
            android:textColor="@color/colorNightBlue"
            android:layout_height="wrap_content"
            android:text="@string/sat"
            android:gravity="center"
            android:layout_weight="1"/>

    </LinearLayout>
</RelativeLayout>